[gd_scene load_steps=8 format=3 uid="uid://bx318d6ukm8n2"]

[ext_resource type="Script" path="res://scripts/ui/player_ui.gd" id="1_c76ns"]
[ext_resource type="Script" path="res://scripts/ui/panel.gd" id="2_3nlbv"]
[ext_resource type="Script" path="res://scripts/ui/interact_panel.gd" id="3_55d8k"]
[ext_resource type="Script" path="res://scripts/ui/restart_panel.gd" id="4_7gvqm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lvkkl"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q0u5i"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_e4d1x"]
font_size = 72
font_color = Color(0, 0, 0, 1)
outline_size = 2
shadow_color = Color(1, 1, 1, 1)

[node name="PlayerUI" type="Control" node_paths=PackedStringArray("canvas", "hud", "healthbar", "interactMenu", "restartMenu")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c76ns")
canvas = NodePath("CanvasLayer")
hud = NodePath("CanvasLayer/MarginContainer/hud")
healthbar = NodePath("CanvasLayer/MarginContainer/hud/HealthBar")
interactMenu = NodePath("CanvasLayer/MarginContainer/interactMenu")
restartMenu = NodePath("CanvasLayer/MarginContainer/RestartPanel")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="hud" type="Control" parent="CanvasLayer/MarginContainer"]
visible = false
visibility_layer = 1024
layout_mode = 2
script = ExtResource("2_3nlbv")

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/MarginContainer/hud"]
modulate = Color(0, 0.733333, 0, 1)
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 175.0
offset_bottom = 35.0
max_value = 5.0
value = 5.0
fill_mode = 1

[node name="interactMenu" type="Control" parent="CanvasLayer/MarginContainer" node_paths=PackedStringArray("exit_button", "back_button", "ui_manager")]
visible = false
layout_mode = 2
script = ExtResource("3_55d8k")
exit_button = NodePath("exit_buttons/exit_button")
back_button = NodePath("exit_buttons/back_button")
ui_manager = NodePath("../../..")

[node name="exit_buttons" type="HBoxContainer" parent="CanvasLayer/MarginContainer/interactMenu"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 48.0
theme_override_constants/separation = 17

[node name="exit_button" type="Button" parent="CanvasLayer/MarginContainer/interactMenu/exit_buttons"]
visibility_layer = 6144
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.361816, 0.348007, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_lvkkl")
text = "X"

[node name="back_button" type="Button" parent="CanvasLayer/MarginContainer/interactMenu/exit_buttons"]
visibility_layer = 4096
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_q0u5i")
text = "<"

[node name="RestartPanel" type="Control" parent="CanvasLayer/MarginContainer" node_paths=PackedStringArray("restart_button", "main_menu_button")]
layout_mode = 2
script = ExtResource("4_7gvqm")
restart_button = NodePath("RestartButton")
main_menu_button = NodePath("MainMenuButton")

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/RestartPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -169.5
offset_top = 150.0
offset_right = 169.5
offset_bottom = 249.0
grow_horizontal = 2
text = "YOU DIED"
label_settings = SubResource("LabelSettings_e4d1x")
horizontal_alignment = 1
uppercase = true

[node name="RestartButton" type="Button" parent="CanvasLayer/MarginContainer/RestartPanel"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -20.0
offset_right = -39.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart"

[node name="MainMenuButton" type="Button" parent="CanvasLayer/MarginContainer/RestartPanel"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 36.0
offset_top = -20.0
offset_right = 186.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Main Menu
"

[connection signal="button_down" from="CanvasLayer/MarginContainer/interactMenu/exit_buttons/exit_button" to="." method="_on_exit_button_button_down"]
[connection signal="button_down" from="CanvasLayer/MarginContainer/interactMenu/exit_buttons/back_button" to="." method="_on_back_button_button_down"]
